Мир стремится к этрапии, код стремится к бардаку

--- a/uptrade/templates/index.html
+++ b/uptrade/templates/index.html
@@ -159,7 +159,7 @@ background: #e36443;
 {% load my_tags %}
 
 
-{% my_tag_menu %}
+{% my_tag_menu menu_selected=menu_selected %}
 
 </body>
 </html>
